sort.pancake.BubblePancake.scala.error
Erreur de compilation :
BubblePancake:15: error: ':' expected but ',' found.
def plusGrand(i,j) : Int = {
               ^BubblePancake:36: error: identifier expected but '}' found.
}
^