sort.pancake.BubblePancake.scala.code
def solve() {
  var n = getTaillePile()
  for (i<-0 to n-2) {
    var x=plusGrand(i,i+1)
    var j=i
    while (j!=-1 && plusGrand(j,j+1)){
      echange(j)
      j -=
    }
  }
}


def plusGrand(i,j) : Int = {
	var x = getRayonCrepe(i)
  var y = getRayonCrepe(j)
  return (x>y)
}


def echange(i:Int) {
  if (i=1) {
    retourne(i)
  }
  else{
  	retourne(i)
  	retourne(i-1)
    retourne(i)
  }
  
}